--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,10 @@ header{
     top: 0;
 }
 
+figure {
+
+}
+
 .head {
     background: #9E050B;
     width: 100%;
@@ -142,12 +146,55 @@ header{
     text-decoration: none;
     color: #E8111A;
 }
+/* container das comidas mais procuradas */
+
+.container {
+    display: flex;
+    background-color: #be9898;
+ 
+    margin: 10px;
+    border-radius: 10px;
+    width: 400px; 
+    height: 150px;
+}
+
+.image {
+    max-width: 50%;
+    height: 150px; 
+}
+
+figure {
+    display: flex;
+}
+
+.textContainer {
+    padding: 20px;
+    margin: 10px;
+}
+
+.descricao {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 20px;
+    margin-top: none;
+}
 
 
-/* Section 2 - Comidas mais Procuradas  */
+h5 {
+    font-size: 16px;
+    color: #777;
+}
 
 h2 {
     font-weight: 500;
+}
+
+.areaSection {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 /* Section 3 - Restaurantes */
