--- a/styles.css
+++ b/styles.css
@@ -386,13 +386,11 @@ footer .contatos {
 
 /* Responsividade da Navbar */
 
-@media(max-width:999px) {
+@media(max-width: 763px) {
+
     body {
         overflow-x: hidden;
     }
-}
-
-@media(max-width: 763px) {
 
     header .head {
         padding-bottom: 33px;
@@ -402,8 +400,8 @@ footer .contatos {
         position: absolute;
         top: 23vh;
         right: 0;
-        width: 50vw;
-        height: 100vh;
+        width: 100vw;
+        height: 100%;
         background: #9E050B;
         flex-direction: column;
         align-items: center;
@@ -411,12 +409,9 @@ footer .contatos {
         transform: translateX(100%);
         transition: transform 0.3s ease-in;
     }
-
-    .nav-list ul {
-    }
     
     .nav-list li {
-        margin-left: 30%;
+        margin-left: 20%;
         opacity: 0;
     }
     
@@ -482,6 +477,21 @@ footer .contatos {
     }
 }
 
+/* Responsividade Formulário */
+@media(max-width:360px){
+    .section5 .inputs-form{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin-left: 25%;
+        width: 50%;
+    }
+
+    .section5 textarea{
+        width: 50%;
+    }
+}
+
 /* Responsividade Footer */
 
 @media(max-width:895px) {
@@ -499,7 +509,9 @@ footer .contatos {
 
     footer {
         display: flex;
+        flex-direction: column;
         justify-content: space-around;
+        gap: 2px;
     }
 
     footer .direitosReservados h6 {
