--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,6 @@ html {
     background: #F5F5F5;
 }
 
-body {
-    overflow-x: hidden;
-}
-
 header {
     position: sticky;
     top: 0;
@@ -393,8 +389,8 @@ footer .contatos {
 @media(max-width: 763px) {
 
     body {
-        overflow-y: hidden;
-        overflow-x: hidden;
+        /* overflow-y: hidden; */
+        /* overflow-x: hidden; */
     }
 
     header .head {
